--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,37 @@
 # Site settings
-name: Less Or More
-email: luoyan35714@126.com
-author: Freud Kang
-url: http://www.hifreud.com
-resume_site: http://www.hifreud.com/Resume.io/
-github: https://github.com/luoyan35714/
-baseurl: "/LessOrMore"
-description: Actually, less is more!
-meta_description: 康志华;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
-motto: It's our wits that make us men.
-banner: 学而不思则罔，思而不学则殆。
-
+name: Test
+email: bigheiniu@gmail.com
+author: Big heiniu
+url: https://bigheiniu.github.io/
+#resume_site: http://www.hifreud.com/Resume.io/ 个人简历网站
+github: https://github.com/bigheiniu
+baseurl: ''
+description: 这是一个描述!
+meta_description: 哈哈
+motto: I am the fattest.
+banner: 爸爸吧
 #permalink: /:categories/:year/:month/:day/:title/
 permalink: /:year/:month/:day/:title/
 paginate: 10
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 
-github_username: luoyan35714
+github_username: bigheiniu
 highlighter: Pygments
 
 # Build settings
 markdown: kramdown
+# gems
+gems: [jekyll-paginate]
+paginate: 5
+paginate_path: "page:num"
+
 
 FB:
   comments :
     provider : duoshuo
-    duoshuo:
-        short_name : luoyan35714
-    disqus :
-        short_name : freudkang
+    duoshuo: 
+        short_name : bigheiniu
     # facebook :
     #   appid : 123
     #   num_posts: 5
